<resources>
    <string name="app_name">Health Alert</string>
    <string name="dd1">Your Better Health Assistant</string>
    <string name="dd2">Health Vitals</string>
    <string name="dd3">Medical Dosage Monitor</string>
    <string name="dd4">Appointments</string>
    <string name="df1">Managing your health should be the easiest task on your to-do list, so we created Health Alert just for you.</string>
    <string name="df2">Keep your health in constant check by monitoring your health vitals.</string>
    <string name="df3">Monitor your medical dosage and take the right medication.</string>
    <string name="df4">Keep track of your scheduled medical appointments and never miss an upcoming one. Thanks to instant notifications.</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
    <string name="create_account">Create Account</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="appointments">Appointments</string>
    <string name="health_vitals">Health Vitals</string>
    <string name="medicine_dosages">Medicine Dosages</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="feedback">Feedback</string>
    <string name="log_out">Log Out</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact Us</string>
    <string name="settings">Profile Settings</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="greetings">How are you doing today?</string>
    <string name="hello_message">Hello User</string>
    <string name="register">Register</string>
    <string name="services_of_health_alert">key services of Health Alert</string>
    <string name="view_all">View All</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="add">Add</string>
    <string name="appointment_type">Appointment Description</string>
    <string name="edit_appointment">Edit Appointment</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="help_healthalert">
        After Successfully fully logging in to Health Alert and being part of our family ,
        you can have all access to our app .
            We have the appointments section where you can enter appointments and add them to a list,
        you "don't" need to keep the date in your head , we will help you store your appointment and also send you a reminder
        when the date is reached , "isn't" that great ? It sure is you can also edit appointments and delete it if you have no use
        for it anymore . Guess what ! we do not only keep your appointments we also keep your medicine dosages and health vitals
        , with us you would never miss the allocated time for you to take your drugs.
        Our app is pretty simple to use , click on the links and enjoy !
        For more Information contact us at team.healthalert@gmail.com. Adios!!

    </string>
    <string name="easy_way_to_use_healthalert_app">Easy way to use HealthAlert app.</string>
    <string name="Help_image">help</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="body_temperature">Body Temperature</string>
    <string name="blood_sugar">Blood Sugar</string>
    <string name="mode">Light Mode</string>
    <string name="update">Update</string>
    <string name="respiratory_rate">Respiratory Rate</string>
    <string name="weight">Weight</string>
    <string name="update_health_vitals">Update Health Vitals</string>
    <string name="height">Height</string>
</resources>